fix: inline-blockによって生じた文字一個分の余白をfont-size: 0;によって相殺 & 吹き出しのbeforeとafterを逆にしたことでz-indexを削除

--- a/layout_parts/q7/css/style.css
+++ b/layout_parts/q7/css/style.css
@@ -45,14 +45,12 @@
 /* inline-block */
 .inline-block {
   /* 謎余白対策 */
-  letter-spacing: -0.4em;
+  font-size: 0;
 }
 
 .inline-block__child {
   display: inline-block;
   vertical-align: middle;
-  /* 謎余白対策 */
-  letter-spacing: normal;
   margin-left: 50px;
 }
 
@@ -68,9 +66,14 @@
 }
 
 /* ネガティブmargin */
+.margin {
+  font-size: 0;
+}
+
 .margin__block {
   vertical-align: top;
   display: inline-block;
+
 }
 
 .margin__text {
